[package]
name = "mischief"
version = "0.1.0"
authors = ["v33ps <v33ps@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.4"
tempfile = "3.1.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
crossbeam-channel = "0.4.0"
log = "0.4"
